--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "rollup -c --watch --config config/rollup.config.dev.js",
+    "dev": "rollup -c --watch --config ./config/rollup.config.dev.js",
     "test": "jest"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/cuppi/olaf-mix#readme",
   "dependencies": {
     "core-js": "3",
+    "loglevel": "^1.6.6",
     "md5": "^2.2.1",
     "numeral": "^2.0.6",
     "uglify-js": "^3.7.1"
@@ -29,12 +30,13 @@
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/pluginutils": "^3.0.0",
     "jest": "^24.9.0",
     "jscodeshift": "^0.6.4",
     "rollup": "^1.27.7",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-uglify": "^6.0.0"
   }
 }
