--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "rollup -c --watch --config ./config/rollup.config.dev.js",
+    "dev-rollup": "rollup -c --watch --config ./config/rollup.config.dev.js",
     "dev-webpack": "webpack --watch --config ./config/webpack.config.js",
     "test": "jest"
   },
