--- a/packages/olaf-mix-loader/package.json
+++ b/packages/olaf-mix-loader/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "olaf-mix": "^0.0.1"
+  },
   "author": "",
   "license": "ISC"
 }
