--- a/packages/olaf-mix-loader/package.json
+++ b/packages/olaf-mix-loader/package.json
@@ -14,6 +14,9 @@
     "@olaf-mix/olaf-mix": "^0.0.2-beta2"
   },
   "devDependencies": {
-    "webpack": "^4.41.3"
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "webpack": "^4.41.3",
+    "webpack-cli": "^3.3.10"
   }
 }
