--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "@olaf-mix/olaf-mix",
-  "version": "0.0.1",
+  "version": "0.0.2-beta2",
   "description": "A flexible obfuscation tool",
-  "main": "./lib/index.js",
+  "main": "./src/main.js",
   "directories": {
     "example": "example",
     "test": "test"
   },
   "scripts": {
-    "dev-rollup": "rollup -c --watch --config ./config/rollup.config.dev.js",
-    "dev-webpack": "webpack --watch --config ./config/webpack.config.js",
     "test": "jest"
   },
   "repository": {
@@ -27,25 +25,12 @@
   },
   "homepage": "https://github.com/jinbaozheng/olaf-mix#readme",
   "dependencies": {
-    "core-js": "3",
     "loglevel": "^1.6.6",
     "md5": "^2.2.1",
-    "numeral": "^2.0.6",
-    "uglify-js": "^3.7.1"
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/pluginutils": "^3.0.0",
-    "babel-loader": "^8.0.6",
     "jest": "^24.9.0",
-    "jscodeshift": "^0.6.4",
-    "rollup": "^1.27.7",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-uglify": "^6.0.0",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10"
+    "jscodeshift": "^0.6.4"
   }
 }
