--- a/packages/rollup-plugin-olaf-mix/package.json
+++ b/packages/rollup-plugin-olaf-mix/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@olaf-mix/olaf-mix": "latest"
+    "@olaf-mix/olaf-mix": "latest",
+    "@rollup/pluginutils": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
@@ -19,7 +20,6 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-uglify": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/pluginutils": "^3.0.0"
+    "@rollup/plugin-node-resolve": "^6.0.0"
   }
 }
