--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olaf-mix/olaf-mix",
-  "version": "0.0.2",
+  "version": "0.0.3-beta1",
   "description": "A flexible obfuscation tool",
   "main": "./src/index.js",
   "directories": {
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "rollup -c --watch --config ./config/rollup.config.js",
+    "transform-ts2js": "rollup -c --watch --config ./example/rollup.config.js",
     "test": "jest"
   },
   "repository": {
@@ -32,13 +32,15 @@
     "jscodeshift": "^0.6.4"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/pluginutils": "^3.0.0",
     "jest": "^24.9.0",
     "rollup": "^1.27.13",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-uglify": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/pluginutils": "^3.0.0",
-    "@olaf-mix/rollup-plugin-olaf-mix": "^1.0.0"
+    "rollup-plugin-typescript": "^1.0.0",
+    "typescript": "^3.2.1",
+    "tslib": "^1.9.3"
   }
 }
