--- a/packages/olaf-mix-loader/package.json
+++ b/packages/olaf-mix-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olaf-mix/olaf-mix-loader",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@olaf-mix/olaf-mix": "latest"
+    "@olaf-mix/olaf-mix": "latest",
+    "loader-utils": "^1.2.3",
+    "schema-utils": "^2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10"
   }
