--- a/packages/rollup-plugin-olaf-mix/package.json
+++ b/packages/rollup-plugin-olaf-mix/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@olaf-mix/olaf-mix": "latest",
-    "@rollup/pluginutils": "^3.0.0"
+    "@rollup/pluginutils": "^3.0.0",
+    "md5": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
