--- a/packages/rollup-plugin-olaf-mix/package.json
+++ b/packages/rollup-plugin-olaf-mix/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olaf-mix/rollup-plugin-olaf-mix",
-  "version": "0.0.3-beta2",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "scripts": {
