--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/jinbaozheng/olaf-mix#readme",
   "dependencies": {
-    "jscodeshift": "^0.6.4",
+    "jscodeshift": "^0.11.0",
     "loglevel": "^1.6.6",
     "md5": "^2.2.1",
     "numeral": "^2.0.6"
@@ -35,13 +35,13 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/pluginutils": "^3.0.0",
-    "jest": "^24.9.0",
-    "rollup": "^1.27.13",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-typescript": "^1.0.0",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup": "^2.27.1",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "tslib": "^1.9.3",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.1",
+    "jest": "^26.4.2"
   }
 }
