--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olaf-mix/olaf-mix",
-  "version": "0.0.4",
+  "version": "0.0.5-beta1",
   "description": "A flexible obfuscation tool",
   "main": "./src/index.js",
   "directories": {
@@ -33,5 +33,8 @@
   },
   "devDependencies": {
     "jest": "^26.4.2"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
